--- a/app/src/main/res/layout/dialog_input_password.xml
+++ b/app/src/main/res/layout/dialog_input_password.xml
@@ -2,11 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
-    android:paddingVertical="@dimen/activity_margin_24dp"
-    android:paddingHorizontal="@dimen/activity_margin_16dp">
+    android:paddingVertical="@dimen/activity_margin_32dp"
+    android:paddingHorizontal="@dimen/activity_margin_64dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
 
     <FrameLayout
         android:id="@+id/flInputCode"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_margin_16dp">
 
@@ -99,7 +99,6 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/passcode_dot_size"
             android:background="@android:color/transparent"
-            android:layout_marginHorizontal="80dp"
             android:textColor="@android:color/transparent"
             android:maxLength="6"
             android:inputType="numberDecimal"
