--- a/app/src/main/res/layout/include_bottom_view_scan.xml
+++ b/app/src/main/res/layout/include_bottom_view_scan.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -99,7 +100,9 @@
                 android:id="@+id/rlScanResultHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_margin_16dp"
+                android:layout_marginHorizontal="@dimen/activity_margin_16dp"
+                android:layout_marginTop="@dimen/activity_margin_16dp"
+                android:layout_marginBottom="@dimen/activity_margin_8dp"
                 android:visibility="gone">
 
                 <LinearLayout
@@ -231,6 +234,98 @@
                         android:text="August 28, 2019"
                         android:gravity="end"
                         android:layout_marginLeft="@dimen/activity_margin_10dp"/>
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/colorPutty"/>
+
+                <LinearLayout
+                    android:id="@+id/llItemStatus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingVertical="@dimen/activity_margin_8dp"
+                    android:gravity="center_vertical"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:id="@+id/tvItemStatus"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/text_size_large"
+                        android:text="@string/text_item_is_new"
+                        android:textColor="@android:color/black"
+                        android:drawableLeft="@drawable/ic_no_owner"
+                        android:gravity="center_vertical"
+                        android:drawablePadding="@dimen/activity_margin_8dp"
+                        android:layout_weight="1"/>
+
+                    <TextView
+                        android:id="@+id/tvItemOwner"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/text_size_xlarge"
+                        android:textStyle="bold"
+                        android:text="Victor Pacheco"
+                        android:gravity="end"
+                        android:layout_marginLeft="@dimen/activity_margin_10dp"
+                        android:visibility="gone"/>
+
+                    <TextView
+                        android:id="@+id/tvClaim"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_claim"
+                        android:textColor="@color/colorBlueGreen"
+                        android:textSize="@dimen/text_size_default"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:background="@drawable/drawable_bg_btn_green_stroke_corner"
+                        android:paddingVertical="@dimen/activity_margin_4dp"
+                        android:visibility="gone"/>
+
+                    <TextView
+                        android:id="@+id/tvSale"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_sale"
+                        android:textColor="@color/colorBlueGreen"
+                        android:textSize="@dimen/text_size_default"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:background="@drawable/drawable_bg_btn_green_stroke_corner"
+                        android:paddingVertical="@dimen/activity_margin_4dp"
+                        android:visibility="gone"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llItemStolen"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical"
+                    android:paddingVertical="@dimen/activity_margin_8dp"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/text_careful"
+                        android:textColor="@color/scarlet"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/text_size_xlarge"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/text_item_stolen"
+                        android:textColor="@color/scarlet"
+                        android:textSize="@dimen/text_size_large"/>
 
                 </LinearLayout>
 
