--- a/app/src/main/res/layout/dialog_input_password.xml
+++ b/app/src/main/res/layout/dialog_input_password.xml
@@ -1,109 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:paddingVertical="@dimen/activity_margin_32dp"
-    android:paddingHorizontal="@dimen/activity_margin_64dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <TextView
+    <ImageView
+        android:id="@+id/btnClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/dialog_title_input_password"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:textSize="@dimen/text_size_xxlarge"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:padding="@dimen/activity_margin_12dp"
+        android:layout_marginTop="@dimen/activity_margin_4dp"
+        android:layout_marginRight="@dimen/activity_margin_4dp"
+        android:src="@drawable/ic_close"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/dialog_des_input_password"
-        android:textSize="@dimen/text_size_default"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="@dimen/activity_margin_4dp"/>
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_marginHorizontal="@dimen/activity_margin_16dp"
+        android:layout_marginVertical="@dimen/activity_margin_24dp">
 
-    <FrameLayout
-        android:id="@+id/flInputCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_margin_16dp">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
+            android:text="@string/dialog_title_input_password"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_size_xlarge"/>
 
-            <ImageView
-                android:id="@+id/tvNumber1"
-                android:layout_width="@dimen/passcode_dot_size"
+        <TextView
+            android:id="@+id/tvMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dialog_des_input_password"
+            android:textSize="@dimen/text_size_default"
+            android:textColor="@android:color/black"
+            android:layout_marginTop="@dimen/activity_margin_8dp"
+            android:gravity="center"/>
+
+        <FrameLayout
+            android:id="@+id/flInputCode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_margin_24dp">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
+
+                <ImageView
+                    android:id="@+id/tvNumber1"
+                    android:layout_width="@dimen/passcode_dot_size"
+                    android:layout_height="@dimen/passcode_dot_size"
+                    android:src="@drawable/ic_passcode_empty"/>
+
+                <View
+                    android:layout_width="@dimen/activity_margin_12dp"
+                    android:layout_height="0dp"/>
+
+                <ImageView
+                    android:id="@+id/tvNumber2"
+                    android:layout_width="@dimen/passcode_dot_size"
+                    android:layout_height="@dimen/passcode_dot_size"
+                    android:src="@drawable/ic_passcode_empty"/>
+
+                <View
+                    android:layout_width="@dimen/activity_margin_12dp"
+                    android:layout_height="0dp"/>
+
+                <ImageView
+                    android:id="@+id/tvNumber3"
+                    android:layout_width="@dimen/passcode_dot_size"
+                    android:layout_height="@dimen/passcode_dot_size"
+                    android:src="@drawable/ic_passcode_empty"/>
+
+                <View
+                    android:layout_width="@dimen/activity_margin_12dp"
+                    android:layout_height="0dp"/>
+
+                <ImageView
+                    android:id="@+id/tvNumber4"
+                    android:layout_width="@dimen/passcode_dot_size"
+                    android:layout_height="@dimen/passcode_dot_size"
+                    android:src="@drawable/ic_passcode_empty"/>
+
+                <View
+                    android:layout_width="@dimen/activity_margin_12dp"
+                    android:layout_height="0dp"/>
+
+                <ImageView
+                    android:id="@+id/tvNumber5"
+                    android:layout_width="@dimen/passcode_dot_size"
+                    android:layout_height="@dimen/passcode_dot_size"
+                    android:src="@drawable/ic_passcode_empty"/>
+
+                <View
+                    android:layout_width="@dimen/activity_margin_12dp"
+                    android:layout_height="0dp"/>
+
+                <ImageView
+                    android:id="@+id/tvNumber6"
+                    android:layout_width="@dimen/passcode_dot_size"
+                    android:layout_height="@dimen/passcode_dot_size"
+                    android:src="@drawable/ic_passcode_empty"/>
+
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/etInputCode"
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/passcode_dot_size"
-                android:src="@drawable/drawable_bg_pass_code"/>
+                android:background="@android:color/transparent"
+                android:textColor="@android:color/transparent"
+                android:maxLength="6"
+                android:inputType="numberDecimal"
+                android:cursorVisible="false"/>
 
-            <View
-                android:layout_width="@dimen/activity_margin_8dp"
-                android:layout_height="0dp"/>
+        </FrameLayout>
 
-            <ImageView
-                android:id="@+id/tvNumber2"
-                android:layout_width="@dimen/passcode_dot_size"
-                android:layout_height="@dimen/passcode_dot_size"
-                android:src="@drawable/drawable_bg_pass_code"/>
+    </LinearLayout>
 
-            <View
-                android:layout_width="@dimen/activity_margin_8dp"
-                android:layout_height="0dp"/>
-
-            <ImageView
-                android:id="@+id/tvNumber3"
-                android:layout_width="@dimen/passcode_dot_size"
-                android:layout_height="@dimen/passcode_dot_size"
-                android:src="@drawable/drawable_bg_pass_code"/>
-
-            <View
-                android:layout_width="@dimen/activity_margin_8dp"
-                android:layout_height="0dp"/>
-
-            <ImageView
-                android:id="@+id/tvNumber4"
-                android:layout_width="@dimen/passcode_dot_size"
-                android:layout_height="@dimen/passcode_dot_size"
-                android:src="@drawable/drawable_bg_pass_code"/>
-
-            <View
-                android:layout_width="@dimen/activity_margin_8dp"
-                android:layout_height="0dp"/>
-
-            <ImageView
-                android:id="@+id/tvNumber5"
-                android:layout_width="@dimen/passcode_dot_size"
-                android:layout_height="@dimen/passcode_dot_size"
-                android:src="@drawable/drawable_bg_pass_code"/>
-
-            <View
-                android:layout_width="@dimen/activity_margin_8dp"
-                android:layout_height="0dp"/>
-
-            <ImageView
-                android:id="@+id/tvNumber6"
-                android:layout_width="@dimen/passcode_dot_size"
-                android:layout_height="@dimen/passcode_dot_size"
-                android:src="@drawable/drawable_bg_pass_code"/>
-
-        </LinearLayout>
-
-        <EditText
-            android:id="@+id/etInputCode"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/passcode_dot_size"
-            android:background="@android:color/transparent"
-            android:textColor="@android:color/transparent"
-            android:maxLength="6"
-            android:inputType="numberDecimal"
-            android:cursorVisible="false"/>
-
-    </FrameLayout>
-
-</LinearLayout>
+</RelativeLayout>
