--- a/app/src/main/res/layout/dialog_input_password.xml
+++ b/app/src/main/res/layout/dialog_input_password.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:padding="@dimen/activity_margin_12dp"
-        android:layout_marginTop="@dimen/activity_margin_4dp"
+        android:layout_marginTop="@dimen/activity_margin_12dp"
         android:layout_marginRight="@dimen/activity_margin_4dp"
         android:src="@drawable/ic_close"/>
 
@@ -19,8 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center_horizontal"
-        android:layout_marginHorizontal="@dimen/activity_margin_16dp"
+        android:layout_marginHorizontal="@dimen/activity_margin_24dp"
         android:layout_marginVertical="@dimen/activity_margin_24dp">
 
         <TextView
@@ -39,14 +38,15 @@
             android:text="@string/dialog_des_input_password"
             android:textSize="@dimen/text_size_default"
             android:textColor="@android:color/black"
-            android:layout_marginTop="@dimen/activity_margin_8dp"
-            android:gravity="center"/>
+            android:layout_marginTop="@dimen/activity_margin_8dp"/>
 
         <FrameLayout
             android:id="@+id/flInputCode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_margin_24dp">
+            android:layout_marginTop="@dimen/activity_margin_24dp"
+            android:layout_marginBottom="@dimen/activity_margin_16dp"
+            android:layout_gravity="center_horizontal">
 
             <LinearLayout
                 android:orientation="horizontal"
