--- a/app/src/main/res/layout/flash_card_layout_back.xml
+++ b/app/src/main/res/layout/flash_card_layout_back.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,19 +15,20 @@
             android:id="@+id/ivBackground"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scaleType="fitXY"
             android:src="@drawable/bg_flip_card_back"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="fitXY"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@+id/ivBackground"
+            android:layout_marginRight="@dimen/activity_margin_34dp"
             app:layout_constraintEnd_toEndOf="@+id/ivBackground"
-            android:layout_marginRight="@dimen/activity_margin_34dp">
+            app:layout_constraintTop_toTopOf="@+id/ivBackground">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -54,39 +54,39 @@
             android:id="@+id/ivBrandLogoBack"
             android:layout_width="44dp"
             android:layout_height="44dp"
-            app:layout_constraintTop_toTopOf="@+id/ivBackground"
-            app:layout_constraintStart_toStartOf="@+id/ivBackground"
             android:layout_marginLeft="@dimen/activity_margin_34dp"
             android:layout_marginTop="@dimen/activity_margin_34dp"
-            android:src="@drawable/logo_adidas" />
+            android:src="@drawable/logo_adidas"
+            app:layout_constraintStart_toStartOf="@+id/ivBackground"
+            app:layout_constraintTop_toTopOf="@+id/ivBackground" />
 
         <RelativeLayout
             android:id="@+id/rlItemNameBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/ivBrandLogoBack"
-            app:layout_constraintStart_toStartOf="@+id/ivBackground"
             android:layout_marginLeft="@dimen/activity_margin_34dp"
-            android:layout_marginTop="@dimen/activity_margin_4dp">
+            android:layout_marginTop="@dimen/activity_margin_4dp"
+            app:layout_constraintStart_toStartOf="@+id/ivBackground"
+            app:layout_constraintTop_toBottomOf="@+id/ivBrandLogoBack">
 
             <TextView
                 android:id="@+id/tvItemNameBack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:text="NMD R1 Trainer"
-                android:textStyle="bold"
-                android:textSize="@dimen/text_size_xlarge"
                 android:textColor="@android:color/black"
-                android:layout_centerVertical="true"/>
+                android:textSize="@dimen/text_size_xlarge"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/ivLimitedBack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_limited_small"
-                android:layout_toEndOf="@+id/tvItemNameBack"
                 android:layout_marginLeft="@dimen/activity_margin_4dp"
-                android:visibility="gone"/>
+                android:layout_toEndOf="@+id/tvItemNameBack"
+                android:src="@drawable/ic_limited_small"
+                android:visibility="gone" />
 
         </RelativeLayout>
 
@@ -94,54 +94,82 @@
             android:id="@+id/llColorSize"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/rlItemNameBack"
-            app:layout_constraintStart_toStartOf="@id/ivBackground"
-            app:layout_constraintEnd_toEndOf="@id/ivBackground"
-            android:layout_marginTop="@dimen/activity_margin_12dp"
             android:layout_marginHorizontal="@dimen/activity_margin_34dp"
-            android:gravity="center_vertical">
+            android:layout_marginTop="@dimen/activity_margin_12dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="@id/ivBackground"
+            app:layout_constraintStart_toStartOf="@id/ivBackground"
+            app:layout_constraintTop_toBottomOf="@id/rlItemNameBack">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/ivItemColor"
                 android:layout_width="@dimen/activity_margin_16dp"
                 android:layout_height="@dimen/activity_margin_16dp"
-                android:src="@color/colorBlueGreen"
-                android:elevation="2dp" />
+                android:elevation="2dp"
+                android:src="@color/colorBlueGreen" />
 
             <View
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/tvItemSize"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="7"
-                android:textSize="@dimen/text_size_xlarge"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:gravity="center"
                 android:drawableLeft="@drawable/ic_size"
-                android:drawablePadding="@dimen/activity_margin_8dp" />
+                android:drawablePadding="@dimen/activity_margin_8dp"
+                android:gravity="center"
+                android:text="7"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_size_xlarge"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/tvFurtherSpec"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
-            app:layout_constraintTop_toBottomOf="@+id/llColorSize"
-            app:layout_constraintStart_toStartOf="@id/ivBackground"
-            app:layout_constraintEnd_toEndOf="@id/ivBackground"
-            android:layout_marginTop="@dimen/activity_margin_16dp"
-            android:layout_marginBottom="@dimen/activity_margin_34dp"
+            android:layout_height="0dp"
             android:layout_marginHorizontal="@dimen/activity_margin_34dp"
             android:ellipsize="end"
+            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
             android:textColor="@color/colorPutty"
-            android:textSize="@dimen/text_size_large"/>
+            android:textSize="@dimen/text_size_large"
+            app:layout_constraintBottom_toTopOf="@+id/llItemHistory"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/llColorSize"
+            android:layout_marginTop="@dimen/activity_margin_16dp"
+            android:layout_marginBottom="@dimen/activity_margin_16dp"/>
+
+        <LinearLayout
+            android:id="@+id/llItemHistory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@+id/ivBackground"
+            app:layout_constraintEnd_toEndOf="@id/ivBackground"
+            app:layout_constraintStart_toStartOf="@id/ivBackground"
+            android:layout_marginBottom="@dimen/activity_margin_34dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_grail_story"
+                android:textColor="@color/colorOrangish"
+                android:textSize="@dimen/text_size_large"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_down"
+                android:tint="@color/colorOrangish" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -157,26 +185,26 @@
             android:id="@+id/ivBackgroundDisabled"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scaleType="fitXY"
             android:src="@drawable/bg_flip_card_back"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="fitXY"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@+id/ivBackgroundDisabled"
+            android:layout_marginRight="@dimen/activity_margin_34dp"
             app:layout_constraintEnd_toEndOf="@+id/ivBackgroundDisabled"
-            android:layout_marginRight="@dimen/activity_margin_34dp">
+            app:layout_constraintTop_toTopOf="@+id/ivBackgroundDisabled">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_flag_card"
-                android:tint="@color/colorPutty"/>
+                android:tint="@color/colorPutty" />
 
             <TextView
                 android:id="@+id/tvItemIndexBackDisabled"
@@ -196,41 +224,41 @@
             android:id="@+id/ivBrandLogoBackDisabled"
             android:layout_width="44dp"
             android:layout_height="44dp"
-            app:layout_constraintTop_toTopOf="@+id/ivBackgroundDisabled"
-            app:layout_constraintStart_toStartOf="@+id/ivBackgroundDisabled"
             android:layout_marginLeft="@dimen/activity_margin_34dp"
             android:layout_marginTop="@dimen/activity_margin_34dp"
             android:src="@drawable/logo_adidas"
-            android:tint="@color/colorPutty"/>
+            android:tint="@color/colorPutty"
+            app:layout_constraintStart_toStartOf="@+id/ivBackgroundDisabled"
+            app:layout_constraintTop_toTopOf="@+id/ivBackgroundDisabled" />
 
         <RelativeLayout
             android:id="@+id/rlItemNameBackDisabled"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/ivBrandLogoBackDisabled"
-            app:layout_constraintStart_toStartOf="@+id/ivBackgroundDisabled"
             android:layout_marginLeft="@dimen/activity_margin_34dp"
-            android:layout_marginTop="@dimen/activity_margin_4dp">
+            android:layout_marginTop="@dimen/activity_margin_4dp"
+            app:layout_constraintStart_toStartOf="@+id/ivBackgroundDisabled"
+            app:layout_constraintTop_toBottomOf="@+id/ivBrandLogoBackDisabled">
 
             <TextView
                 android:id="@+id/tvItemNameBackDisabled"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:text="NMD R1 Trainer"
-                android:textStyle="bold"
-                android:textSize="@dimen/text_size_xlarge"
                 android:textColor="@color/colorPutty"
-                android:layout_centerVertical="true" />
+                android:textSize="@dimen/text_size_xlarge"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/ivLimitedBackDisabled"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_limited_small"
-                android:layout_toEndOf="@+id/tvItemNameBackDisabled"
                 android:layout_marginLeft="@dimen/activity_margin_4dp"
+                android:layout_toEndOf="@+id/tvItemNameBackDisabled"
+                android:src="@drawable/ic_limited_small"
                 android:tint="@color/colorPutty"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
         </RelativeLayout>
 
@@ -238,54 +266,82 @@
             android:id="@+id/llColorSizeDisabled"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/rlItemNameBackDisabled"
-            app:layout_constraintStart_toStartOf="@id/ivBackgroundDisabled"
-            app:layout_constraintEnd_toEndOf="@id/ivBackgroundDisabled"
-            android:layout_marginTop="@dimen/activity_margin_12dp"
             android:layout_marginHorizontal="@dimen/activity_margin_34dp"
-            android:gravity="center_vertical">
+            android:layout_marginTop="@dimen/activity_margin_12dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="@id/ivBackgroundDisabled"
+            app:layout_constraintStart_toStartOf="@id/ivBackgroundDisabled"
+            app:layout_constraintTop_toBottomOf="@id/rlItemNameBackDisabled">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/ivItemColorDisable"
                 android:layout_width="@dimen/activity_margin_16dp"
                 android:layout_height="@dimen/activity_margin_16dp"
-                android:src="@color/colorPutty"
-                android:elevation="2dp" />
+                android:elevation="2dp"
+                android:src="@color/colorPutty" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/tvItemSizeDisabled"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="7"
-                android:textSize="@dimen/text_size_xlarge"
-                android:textColor="@color/colorPutty"
-                android:textStyle="bold"
-                android:gravity="center"
                 android:drawableLeft="@drawable/ic_size"
                 android:drawablePadding="@dimen/activity_margin_8dp"
-                android:drawableTint="@color/colorPutty"/>
+                android:drawableTint="@color/colorPutty"
+                android:gravity="center"
+                android:text="7"
+                android:textColor="@color/colorPutty"
+                android:textSize="@dimen/text_size_xlarge"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
-            app:layout_constraintTop_toBottomOf="@+id/llColorSizeDisabled"
-            app:layout_constraintStart_toStartOf="@id/ivBackgroundDisabled"
-            app:layout_constraintEnd_toEndOf="@id/ivBackgroundDisabled"
-            android:layout_marginTop="@dimen/activity_margin_16dp"
-            android:layout_marginBottom="@dimen/activity_margin_34dp"
+            android:layout_height="0dp"
             android:layout_marginHorizontal="@dimen/activity_margin_34dp"
+            android:layout_marginTop="@dimen/activity_margin_16dp"
+            android:layout_marginBottom="@dimen/activity_margin_16dp"
             android:ellipsize="end"
+            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
             android:textColor="@color/colorPutty"
-            android:textSize="@dimen/text_size_large"/>
+            android:textSize="@dimen/text_size_large"
+            app:layout_constraintBottom_toTopOf="@+id/llItemHistoryDisable"
+            app:layout_constraintEnd_toEndOf="@id/ivBackgroundDisabled"
+            app:layout_constraintStart_toStartOf="@id/ivBackgroundDisabled"
+            app:layout_constraintTop_toBottomOf="@+id/llColorSizeDisabled" />
+
+        <LinearLayout
+            android:id="@+id/llItemHistoryDisable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@+id/ivBackgroundDisabled"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="@dimen/activity_margin_34dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="See your Grailstory"
+                android:textColor="@color/colorOrangish"
+                android:textSize="@dimen/text_size_large"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_down"
+                android:tint="@color/colorOrangish" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
